--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "3rdparty/glew-cmake"]
-	path = Engine/3rdparty/glew-cmake
+	path = 3rdparty/glew-cmake
 	url = https://github.com/Perlmint/glew-cmake.git
 
 [submodule "3rdparty/glfw"]
-	path = Engine/3rdparty/glfw
+	path = 3rdparty/glfw
 	url = https://github.com/glfw/glfw.git
