Trying Buffers & Vertex Arrays with Shaders

--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -51,7 +51,7 @@ set_target_properties(Engine
         ARCHIVE_OUTPUT_DIRECTORY ${ROOT_DIR}/build/${CMAKE_BUILD_TYPE}/lib/Engine
 )
 
-add_custom_command(TARGET Engine PRE_BUILD
+add_custom_command(TARGET Engine POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_directory
         ${ENGINE_ROOT_DIR}/Resources/
         $<TARGET_FILE_DIR:Engine>/Resources/
