--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -36,9 +36,13 @@ list(APPEND ENGINE_LIBRARIES glfw)
 list(APPEND ENGINE_INCLUDE_DIRS ${GLEW_INCLUDE_DIR})
 list(APPEND ENGINE_LIBRARIES libglew_shared)
 
-# GL¨M
+# GLM
 list(APPEND ENGINE_INCLUDE_DIRS ${GLM_INCLUDE_DIR})
 list(APPEND ENGINE_LIBRARIES glm_shared)
+
+# IMGUI
+list(APPEND ENGINE_INCLUDE_DIRS ${IMGUI_INCLUDE_DIR})
+list(APPEND ENGINE_LIBRARIES imgui_shared)
 
 # Create Library
 include_directories(${ENGINE_INCLUDES_DIR})
